// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypeOperator renders Basic Babel 1`] = `
{
  "body": [
    {
      "id": {
        "name": "T1",
        "type": "Identifier",
      },
      "right": {
        "type": "AnyTypeAnnotation",
      },
      "type": "TypeAlias",
      "typeParameters": null,
    },
    {
      "id": {
        "name": "T2",
        "type": "Identifier",
      },
      "right": {
        "type": "AnyTypeAnnotation",
      },
      "type": "TypeAlias",
      "typeParameters": null,
    },
    {
      "id": {
        "name": "T3",
        "type": "Identifier",
      },
      "right": {
        "type": "AnyTypeAnnotation",
      },
      "type": "TypeAlias",
      "typeParameters": null,
    },
  ],
  "type": "Program",
}
`;

exports[`TypeOperator renders Basic ESTree 1`] = `
{
  "body": [
    {
      "id": {
        "name": "T1",
        "optional": false,
        "type": "Identifier",
        "typeAnnotation": null,
      },
      "right": {
        "operator": "renders",
        "type": "TypeOperator",
        "typeAnnotation": {
          "id": {
            "name": "Foo",
            "optional": false,
            "type": "Identifier",
            "typeAnnotation": null,
          },
          "type": "GenericTypeAnnotation",
          "typeParameters": null,
        },
      },
      "type": "TypeAlias",
      "typeParameters": null,
    },
    {
      "id": {
        "name": "T2",
        "optional": false,
        "type": "Identifier",
        "typeAnnotation": null,
      },
      "right": {
        "operator": "renders*",
        "type": "TypeOperator",
        "typeAnnotation": {
          "id": {
            "name": "Foo",
            "optional": false,
            "type": "Identifier",
            "typeAnnotation": null,
          },
          "type": "GenericTypeAnnotation",
          "typeParameters": null,
        },
      },
      "type": "TypeAlias",
      "typeParameters": null,
    },
    {
      "id": {
        "name": "T3",
        "optional": false,
        "type": "Identifier",
        "typeAnnotation": null,
      },
      "right": {
        "operator": "renders?",
        "type": "TypeOperator",
        "typeAnnotation": {
          "id": {
            "name": "Foo",
            "optional": false,
            "type": "Identifier",
            "typeAnnotation": null,
          },
          "type": "GenericTypeAnnotation",
          "typeParameters": null,
        },
      },
      "type": "TypeAlias",
      "typeParameters": null,
    },
  ],
  "type": "Program",
}
`;

exports[`TypeOperator renders Nested Union Babel 1`] = `
{
  "body": [
    {
      "id": {
        "name": "T",
        "type": "Identifier",
      },
      "right": {
        "type": "UnionTypeAnnotation",
        "types": [
          {
            "type": "AnyTypeAnnotation",
          },
          {
            "type": "NullLiteralTypeAnnotation",
          },
        ],
      },
      "type": "TypeAlias",
      "typeParameters": null,
    },
  ],
  "type": "Program",
}
`;

exports[`TypeOperator renders Nested Union ESTree 1`] = `
{
  "body": [
    {
      "id": {
        "name": "T",
        "optional": false,
        "type": "Identifier",
        "typeAnnotation": null,
      },
      "right": {
        "type": "UnionTypeAnnotation",
        "types": [
          {
            "operator": "renders",
            "type": "TypeOperator",
            "typeAnnotation": {
              "type": "UnionTypeAnnotation",
              "types": [
                {
                  "id": {
                    "name": "Foo",
                    "optional": false,
                    "type": "Identifier",
                    "typeAnnotation": null,
                  },
                  "type": "GenericTypeAnnotation",
                  "typeParameters": null,
                },
                {
                  "id": {
                    "name": "Bar",
                    "optional": false,
                    "type": "Identifier",
                    "typeAnnotation": null,
                  },
                  "type": "GenericTypeAnnotation",
                  "typeParameters": null,
                },
              ],
            },
          },
          {
            "type": "NullLiteralTypeAnnotation",
          },
        ],
      },
      "type": "TypeAlias",
      "typeParameters": null,
    },
  ],
  "type": "Program",
}
`;

exports[`TypeOperator renders Union Babel 1`] = `
{
  "body": [
    {
      "id": {
        "name": "T1",
        "type": "Identifier",
      },
      "right": {
        "type": "AnyTypeAnnotation",
      },
      "type": "TypeAlias",
      "typeParameters": null,
    },
    {
      "id": {
        "name": "T2",
        "type": "Identifier",
      },
      "right": {
        "type": "AnyTypeAnnotation",
      },
      "type": "TypeAlias",
      "typeParameters": null,
    },
    {
      "id": {
        "name": "T3",
        "type": "Identifier",
      },
      "right": {
        "type": "AnyTypeAnnotation",
      },
      "type": "TypeAlias",
      "typeParameters": null,
    },
  ],
  "type": "Program",
}
`;

exports[`TypeOperator renders Union ESTree 1`] = `
{
  "body": [
    {
      "id": {
        "name": "T1",
        "optional": false,
        "type": "Identifier",
        "typeAnnotation": null,
      },
      "right": {
        "operator": "renders",
        "type": "TypeOperator",
        "typeAnnotation": {
          "type": "UnionTypeAnnotation",
          "types": [
            {
              "id": {
                "name": "Foo",
                "optional": false,
                "type": "Identifier",
                "typeAnnotation": null,
              },
              "type": "GenericTypeAnnotation",
              "typeParameters": null,
            },
            {
              "id": {
                "name": "Bar",
                "optional": false,
                "type": "Identifier",
                "typeAnnotation": null,
              },
              "type": "GenericTypeAnnotation",
              "typeParameters": null,
            },
          ],
        },
      },
      "type": "TypeAlias",
      "typeParameters": null,
    },
    {
      "id": {
        "name": "T2",
        "optional": false,
        "type": "Identifier",
        "typeAnnotation": null,
      },
      "right": {
        "operator": "renders*",
        "type": "TypeOperator",
        "typeAnnotation": {
          "type": "UnionTypeAnnotation",
          "types": [
            {
              "id": {
                "name": "Foo",
                "optional": false,
                "type": "Identifier",
                "typeAnnotation": null,
              },
              "type": "GenericTypeAnnotation",
              "typeParameters": null,
            },
            {
              "id": {
                "name": "Bar",
                "optional": false,
                "type": "Identifier",
                "typeAnnotation": null,
              },
              "type": "GenericTypeAnnotation",
              "typeParameters": null,
            },
          ],
        },
      },
      "type": "TypeAlias",
      "typeParameters": null,
    },
    {
      "id": {
        "name": "T3",
        "optional": false,
        "type": "Identifier",
        "typeAnnotation": null,
      },
      "right": {
        "operator": "renders?",
        "type": "TypeOperator",
        "typeAnnotation": {
          "type": "UnionTypeAnnotation",
          "types": [
            {
              "id": {
                "name": "Foo",
                "optional": false,
                "type": "Identifier",
                "typeAnnotation": null,
              },
              "type": "GenericTypeAnnotation",
              "typeParameters": null,
            },
            {
              "id": {
                "name": "Bar",
                "optional": false,
                "type": "Identifier",
                "typeAnnotation": null,
              },
              "type": "GenericTypeAnnotation",
              "typeParameters": null,
            },
          ],
        },
      },
      "type": "TypeAlias",
      "typeParameters": null,
    },
  ],
  "type": "Program",
}
`;
